<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.risk</groupId>
    <artifactId>decision-system</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.0</version>
        <relativePath/>
    </parent>

    <modules>
        <module>common-enum</module>
        <module>common-api</module>
        <module>calculation-service</module>
        <module>decision-service</module>
        <module>decision-frontend</module>
    </modules>

    <properties>
        <java.version>21</java.version>
    </properties>

</project>